[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/SceneController.gd" type="Script" id=1]
[ext_resource path="res://Inn.gd" type="Script" id=2]
[ext_resource path="res://textures/inn_potions.png" type="Texture" id=3]
[ext_resource path="res://textures/potion.png" type="Texture" id=4]
[ext_resource path="res://textures/slime.png" type="Texture" id=5]
[ext_resource path="res://textures/coin.png" type="Texture" id=6]
[ext_resource path="res://textures/sun.png" type="Texture" id=7]
[ext_resource path="res://textures/ale.png" type="Texture" id=8]
[ext_resource path="res://textures/button_anim2.png" type="Texture" id=9]
[ext_resource path="res://textures/button_anim1.png" type="Texture" id=10]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 2
fps = 2.0
frame_0/texture = ExtResource( 10 )
frame_1/texture = ExtResource( 9 )
frame_1/delay_sec = 0.0

[node name="SceneController" type="Node"]
script = ExtResource( 1 )

[node name="Inn" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Inn" type="Sprite" parent="Inn"]
position = Vector2( 102, 161 )
texture = ExtResource( 3 )

[node name="buttons" type="CanvasLayer" parent="Inn"]

[node name="ale" type="Button" parent="Inn/buttons"]
margin_left = 9.0
margin_top = 274.0
margin_right = 78.0447
margin_bottom = 301.0
text = "Make ale"
icon = ExtResource( 8 )

[node name="Coin" type="Sprite" parent="Inn/buttons/ale"]
position = Vector2( 108, 10 )
texture = ExtResource( 6 )

[node name="Coin2" type="Sprite" parent="Inn/buttons/ale"]
position = Vector2( 128, 10 )
texture = ExtResource( 6 )

[node name="potion" type="Button" parent="Inn/buttons"]
margin_left = 9.0
margin_top = 311.0
margin_right = 100.045
margin_bottom = 338.0
text = "Make potions"
icon = ExtResource( 4 )

[node name="Coin3" type="Sprite" parent="Inn/buttons/potion"]
position = Vector2( 129, 12 )
texture = ExtResource( 6 )

[node name="Slime" type="Sprite" parent="Inn/buttons/potion"]
position = Vector2( 157, 11 )
texture = ExtResource( 5 )

[node name="Slime2" type="Sprite" parent="Inn/buttons/potion"]
position = Vector2( 193, 11 )
texture = ExtResource( 5 )

[node name="rest" type="Button" parent="Inn/buttons"]
margin_left = 9.0
margin_top = 347.0
margin_right = 49.0447
margin_bottom = 374.0
text = "Rest"
icon = ExtResource( 7 )

[node name="SkillsBtn" type="Button" parent="Inn/buttons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -109.0
margin_top = -40.0
margin_right = -10.0
margin_bottom = -10.0
text = "Skills ->"

[node name="stock" type="CanvasLayer" parent="Inn"]

[node name="coins" type="Label" parent="Inn/stock"]
margin_left = 228.0
margin_top = 61.0
margin_right = 287.0
margin_bottom = 75.0
text = "Coins: 10"

[node name="slimes" type="Label" parent="Inn/stock"]
margin_left = 228.0
margin_top = 86.0
margin_right = 295.0
margin_bottom = 100.0
text = "Slimes: 10"

[node name="ale" type="Label" parent="Inn/stock"]
margin_left = 228.0
margin_top = 155.0
margin_right = 268.0
margin_bottom = 169.0
text = "Ale: 0"

[node name="potions" type="Label" parent="Inn/stock"]
margin_left = 228.0
margin_top = 181.0
margin_right = 292.0
margin_bottom = 195.0
text = "Potions: 0"

[node name="hp" type="Label" parent="Inn/stock"]
margin_left = 229.0
margin_top = 37.0
margin_right = 269.0
margin_bottom = 51.0
text = "HP: 0"

[node name="today" type="CanvasLayer" parent="Inn"]

[node name="Line2D" type="Line2D" parent="Inn/today"]
points = PoolVector2Array( 14, 397, 446, 397 )
width = 3.0

[node name="Patrons" type="Label" parent="Inn/today"]
margin_left = 12.0
margin_top = 464.0
margin_right = 80.0
margin_bottom = 478.0
text = "Patrons : 3"

[node name="Ale" type="Label" parent="Inn/today"]
margin_left = 12.0
margin_top = 488.0
margin_right = 88.0
margin_bottom = 502.0
text = "Ale drank: 0"

[node name="Pos" type="Position2D" parent="Inn/today/Ale"]
position = Vector2( 453, 8 )

[node name="Potions" type="Label" parent="Inn/today"]
margin_left = 10.0
margin_top = 512.0
margin_right = 122.0
margin_bottom = 526.0
text = "Potions bought: 0"

[node name="Pos" type="Position2D" parent="Inn/today/Potions"]
position = Vector2( 455, 8 )

[node name="Slimes" type="Label" parent="Inn/today"]
margin_left = 9.0
margin_top = 536.0
margin_right = 137.0
margin_bottom = 550.0
text = "Slimes brought in: 0"

[node name="Pos_Coins" type="Position2D" parent="Inn/today/Slimes"]
position = Vector2( 456, 8 )

[node name="Pos_Slimes" type="Position2D" parent="Inn/today/Slimes"]
position = Vector2( 456, 32 )

[node name="Label" type="Label" parent="Inn/today"]
margin_left = 224.0
margin_top = 408.0
margin_right = 264.0
margin_bottom = 422.0
text = "Today"

[node name="MadeToday" type="Label" parent="Inn/today"]
margin_left = 11.0
margin_top = 440.0
margin_right = 89.0
margin_bottom = 454.0

[node name="DialogBtn" type="TextureButton" parent="Inn"]
margin_left = 61.0
margin_top = 151.0
margin_right = 120.0
margin_bottom = 181.0
texture_normal = SubResource( 1 )
expand = true
stretch_mode = 4

[connection signal="pressed" from="Inn/buttons/ale" to="Inn" method="_on_ale_pressed"]
[connection signal="pressed" from="Inn/buttons/potion" to="Inn" method="_on_potion_pressed"]
[connection signal="pressed" from="Inn/buttons/rest" to="Inn" method="_on_rest_pressed"]
[connection signal="pressed" from="Inn/buttons/SkillsBtn" to="." method="_on_SkillsBtn_pressed"]
[connection signal="pressed" from="Inn/DialogBtn" to="." method="_on_DialogBtn_pressed"]
